update use instructions

--- a/Graphs/directed-graph-help.html
+++ b/Graphs/directed-graph-help.html
@@ -61,8 +61,10 @@
 
 <body style="width:1000px;margin:auto auto;font-size:16px"><br />
     <h2>A directed graph variant</h2><br />
-    <h4>Please refer to the <a href="undirected-graph-help.html" target="_blank">undirected version</a>for information
-        regarding layouts, basic functions, menus and keyboard shortcuts.</h4><br />
+    <h4>
+        Please refer to the <a href="undirected-graph-help.html" target="_blank">undirected version</a> 
+        for information regarding layouts, basic functions, menus and keyboard shortcuts.
+    </h4><br />
     <h2>Algorithms</h2>
     <div id="pr">
         <h3>Page Rank</h3>
@@ -124,7 +126,16 @@
     Weaver.js<br />
     Lodash.js<br />
     Math.js<br />
-    <h2>Update catalog</h2><strong>March 3rd, 2018</strong><br />
+
+    <h2>Update catalog</h2>
+    
+    <strong>
+        For latest changes, please refer to my 
+        <a href="https://github.com/hanzhi713/Discrete-Math-Tools/commits/master"
+        target="_blank">commits</a>
+    </strong><br /><br />
+    
+    <strong>March 3rd, 2018</strong><br />
     1. Fixed incorrect display of the native pagerank algorithm<br />
     2. Changed the normalization parameter so that the normalization of the rank happens in between two iterations<br />
     <br />
